fixed css for user and blindtest modal

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,3 +14,7 @@ body{
     color: white !important;
     font-family: 'Rubik', sans-serif;
 }
+
+.modal-content{
+    background-color: #212529 !important;
+}
