--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -84,7 +84,7 @@
     font-weight: bold !important;
     height: 50px;
 }
-.roombtn{
+.roombtn, .startbtn{
     font-size: 1.5rem;
     margin-top: 20px;
 }
