--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 @import "./home.css";
 @import "./register.css";
+@import "./room.css";
+@import "./scoreboard.css";
 
 *{
     margin: 0;
