button nav logic added

--- a/public/assets/css/scoreboard.css
+++ b/public/assets/css/scoreboard.css
@@ -2,7 +2,7 @@
     height: 100px;
 }
 
-.container{
+.container-scoreboard{
     padding: 0.7rem 1.5rem;
     border-radius: 0.5rem;
     background: #212529;
