--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -96,6 +96,11 @@ p.navbar-text{
     margin-bottom: 0;
 }
 
+div#songList{
+    background-color: #212529 !important;
+    border: none;
+}
+
 @media (max-width: 576px) {
     #btn-join {
         width: 100%;
